# RandomCoffee

./: CMakeLists.txt  main.cpp  myobject.cpp
AndroidApp/: Main.qml  main.cpp  myobject.cpp  myobject.h
DB_and_NN/: backup.sql
DB_and_NN/PGxx/: Neiro.cpp  PGxx.cpp  PGxx.vcxproj  PGxx.vcxproj.filters  PQmod.cpp
DB_and_NN/PGxx/x64/Debug/: PGxx.exe.recipe  PGxx.ilk  vc143.idb
DB_and_NN/PGxx/x64/Debug/PGxx.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  PGxx.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
android/: AndroidManifest.xml
